src/objects/ACCL__Order__c.object
<CustomObject>
    <fields>
        <fullName>ACCL__Total_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total value (domestic currency) of the order including item discounts, without sales taxes.</description>
        <label>Total Value/Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Tour__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field looks up to Tour</description>
        <label>Tour</label>
        <referenceTo>ACCL__Tour__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Upload_Id__c</fullName>
        <externalId>true</externalId>
        <label>Upload Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value of the order entry in the order/receipt currency.</description>
        <label>Value(Receipt)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Warehouse__c</fullName>
        <description>The warehouse from which the customer will be delivered.</description>
        <label>Warehouse</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>CE</fullName>
                </value>
                <value>
                    <fullName>55001</fullName>
                </value>
                <value>
                    <fullName>55002</fullName>
                </value>
                <value>
                    <fullName>55003</fullName>
                </value>
                <value>
                    <fullName>55004</fullName>
                </value>
                <value>
                    <fullName>5505</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Wholesaler of the Account</description>
        <label>Wholesaler</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Orders (Wholesaler)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Workflow__c</fullName>
        <formula>ACCL__Order_Template__r.ACCL__Workflow__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workflow</label>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MDLZ_AccountTeam__c</fullName>
        <description>Indicates the team information of the account, value will come from the flow</description>
        <label>Account Team</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_AccountTerritory__c</fullName>
        <description>Indicates the territory information of the account, value will come from the flow</description>
        <label>Account Territory</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_AccTeam__c</fullName>
        <description>Indicates the team information of the account. Used for filtering.</description>
        <formula>ACCL__Order_Account__r.MDLZ_AccountTeam__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_AccTerritory__c</fullName>
        <description>Indicates the territory information of the account. Used for filtering.</description>
        <formula>ACCL__Order_Account__r.MDLZ_AccountTerritory__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_Approval_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDLZ_Approved__c</fullName>
        <label>Approved</label>
        <type>DateTime</type>
    </fields>
	<fields>
        <fullName>MDLZ_DeliveredTotal__c</fullName>
        <label>Delivered Quantity Total</label>
        <summarizedField>ACCL__Order_Item__c.MDLZ_DeliveredQty__c</summarizedField>
        <summaryForeignKey>ACCL__Order_Item__c.ACCL__Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MDLZ_ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
	<fields>
        <fullName>MDLZ_InvoiceAmount__c</fullName>
        <description>Stores the invoice amount and is updated by the Delivered interface</description>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_IsSFAutoGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated when a CAO wrapper order is created for NOS and EDI order</description>
        <label>Is SF AutoGenerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDLZ_IsUnsaleableCredit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Unsaleable Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDLZ_IsUnsaleablePickup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Unsaleable Pickup</label>
        <type>Checkbox</type>
    </fields>
	 <fields>
        <fullName>MDLZ_ManualisChanged__c</fullName>
        <label>Manual Is Changed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>MDLZ_MobItemsModified__c</fullName>
        <description>Holds the total number of order items edited/added by user.</description>
        <label>Mobile Items Modified</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_PickupLocation__c</fullName>
        <label>Pickup Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pickup Receiving Area</fullName>
                </value>
                <value>
                    <fullName>Pickup Backstock</fullName>
                </value>
                <value>
                    <fullName>Pickup Backroom Receive</fullName>
                </value>
                <value>
                    <fullName>Destroyed in Store</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>MDLZ_ReadyForOutbound__c</fullName>
        <description>Indicates when all items are received in SF and order is ready to send to SAP</description>
        <formula>MDLZ_MobItemsModified__c &gt;= MDLZ_SFItemsReceived__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready for Outbound</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>MDLZ_RecBySAPTotal__c</fullName>
        <label>Received By SAP Total</label>
        <summarizedField>ACCL__Order_Item__c.ACCL__Quantity__c</summarizedField>
        <summaryForeignKey>ACCL__Order_Item__c.ACCL__Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MDLZ_ReceivedBySAP__c</fullName>
        <label>Received By SAP</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MDLZ_SAPDeliveryDate__c</fullName>
        <label>SAP Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MDLZ_SAPFailureReason__c</fullName>
        <description>Error message from SAP</description>
        <label>SAP Failure Reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_SAPInvoiceNumber__c</fullName>
        <label>SAP Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_SAPOrderVersion__c</fullName>
        <label>SAP Order Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_SAPPONumber__c</fullName>
        <label>SAP PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_SAPRejectionCode__c</fullName>
        <description>Rejection code from SAP</description>
        <label>SAP Rejection Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MDLZ_SubmittedTotal__c</fullName>
        <label>Submitted Total</label>
        <summarizedField>ACCL__Order_Item__c.MDLZ_MobileQty__c</summarizedField>
        <summaryForeignKey>ACCL__Order_Item__c.ACCL__Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
	<fields>
        <fullName>MDLZ_TotReturnQty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field holds the sum of quantities for returns and unsaleable credits to display on consolidated order overview screen</description>
        <label>Total Return Qty</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_Total_Case_Quantity__c</fullName>
        <description>Sum of case quantity of all products in the order item</description>
        <label>Total Case Quantity</label>
        <summarizedField>ACCL__Order_Item__c.ACCL__Quantity__c</summarizedField>
        <summaryForeignKey>ACCL__Order_Item__c.ACCL__Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MDLZ_UnsaleablePickupCredit__c</fullName>
        <label>Unsaleable Pickup/Credit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pickup</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDLZ_WF_TimeTrigger__c</fullName>
        <description>Formula returns date / time in the past 1hr. e.g. if custom label value is 59, formula will return 59 mins before lastmodifieddate. This will be further used in Time based workflow. Defect reference: MRELKXIW-2041.</description>
        <formula>LastModifiedDate -  (Value($Label.MDLZ_Workflow_Min_Control) * 0.00069)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MDLZ WF Time Trigger</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MDLZ_isChanged__c</fullName>
        <description>Functionality introduced for RDT pilot for Order Redesign to address following defects:
MRELKXIW-1925, MRELKXIW-1912, MRELKXIW-1918</description>
        <label>IsChanged</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FALSE</fullName>
                    <default>true</default>
                    <label>FALSE</label>
                </value>
                <value>
                    <fullName>TRUE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>isChanged__c</fullName>
        <description>Functionality introduced for RDT pilot for Order Redesign to address following defects:
MRELKXIW-1925, MRELKXIW-1912, MRELKXIW-1918</description>
        <label>isChanged</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FALSE</fullName>
                    <default>true</default>
                    <label>FALSE</label>
                </value>
                <value>
                    <fullName>TRUE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MDLZ_isOffRoute__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set this field on mobility if the order is an offRoute or not</description>
        <label>is Off Route</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MLZ_OffRouteReasonCode__c</fullName>
        <label>Off Route Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Z01 - DSD Holiday Week</fullName>
                </value>
                <value>
                    <fullName>Z02 - DSD Store Inventory</fullName>
                </value>
                <value>
                    <fullName>Z03 - DSD New Display</fullName>
                </value>
                <value>
                    <fullName>Z04 - DSD Replace Refused Order</fullName>
                </value>
                <value>
                    <fullName>Z05 - DSD Allowance Not Given</fullName>
                </value>
                <value>
                    <fullName>Z13 - DSD Store Sampling Event</fullName>
                </value>
                <value>
                    <fullName>Z18 - DSD New Store</fullName>
                </value>
                <value>
                    <fullName>Z19 - DSD Reset</fullName>
                </value>
                <value>
                    <fullName>Z20 - DSD Low stock - store</fullName>
                </value>
                <value>
                    <fullName>Z21 - DSD Could not deliver</fullName>
                </value>
                <value>
                    <fullName>Z26 - DSD Missed Delivery Window</fullName>
                </value>
                <!--<value>
                    <fullName>Z27 - DSD Quarter Close</fullName>
                </value>-->
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TestPhase__c</fullName>
        <label>TestPhase</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Order_Template__c</columns>
        <columns>ACCL__Order_Account__c</columns>
        <columns>ACCL__Order_Date__c</columns>
        <columns>ACCL__Delivery_Date__c</columns>
        <columns>ACCL__Initiation_Date__c</columns>
        <columns>ACCL__Phase__c</columns>
        <columns>TestPhase__c</columns>
        <columns>MDLZ_Total_Case_Quantity__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>ACCL__Order_Id__c</columns>
        <columns>MDLZ_ExternalId__c</columns>
        <columns>MDLZ_Approved__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
	<listViews>
        <fullName>MDLZ_POD_Orders</fullName>
        <columns>ACCL__Order_Account__c</columns>
        <columns>ACCL__Delivery_Date__c</columns>
        <columns>ACCL__Invoice_Note__c</columns>
        <columns>ACCL__Phase__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Order_Template__c</field>
            <operation>equals</operation>
            <value>Proof Of Delivery</value>
        </filters>
        <label>POD Orders</label>
    </listViews>
    <listViews>
        <fullName>MDLZ_Wrapper_Orders</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Order_Template__c</columns>
        <columns>ACCL__Order_Account__c</columns>
        <columns>ACCL__Order_Date__c</columns>
        <columns>ACCL__Delivery_Date__c</columns>
        <columns>ACCL__Initiation_Date__c</columns>
        <columns>ACCL__Phase__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>ACCL__Order_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Order_Template__c</field>
            <operation>equals</operation>
            <value>Order Wrapper</value>
        </filters>
        <label>Wrapper Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open_Orders</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Order_Id__c</columns>
        <columns>ACCL__Responsible__c</columns>
        <columns>ACCL__Order_Account__c</columns>
        <columns>ACCL__Order_Template__c</columns>
        <columns>ACCL__Order_Date__c</columns>
        <columns>ACCL__Phase__c</columns>
        <columns>ACCL__Value__c</columns>
        <columns>ACCL__Gross_Total_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Phase__c</field>
            <operation>equals</operation>
            <value>Initial</value>
        </filters>
        <label>Open Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Released_Orders</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Order_Id__c</columns>
        <columns>ACCL__Responsible__c</columns>
        <columns>ACCL__Order_Account__c</columns>
        <columns>ACCL__Order_Template__c</columns>
        <columns>ACCL__Order_Date__c</columns>
        <columns>ACCL__Phase__c</columns>
        <columns>ACCL__Value__c</columns>
        <columns>ACCL__Gross_Total_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Phase__c</field>
            <operation>equals</operation>
            <value>Released</value>
        </filters>
        <label>Released Orders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>US01_Orders</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Order_Id__c</columns>
        <columns>ACCL__Order_Account__c</columns>
        <columns>ACCL__Responsible__c</columns>
        <columns>ACCL__Accountable__c</columns>
        <columns>ACCL__Order_Template__c</columns>
        <columns>ACCL__Phase__c</columns>
        <columns>MDLZ_Approval_Email_Sent__c</columns>
        <columns>MDLZ_isOffRoute__c</columns>
        <columns>ACCL__Delivery_Date__c</columns>
        <columns>ACCL__Order_Date__c</columns>
        <columns>ACCL__Value__c</columns>
        <columns>ACCL__Gross_Total_Value__c</columns>
        <columns>ACCL__Calculation_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Responsible__c</field>
            <operation>contains</operation>
            <value>Nicholas</value>
        </filters>
        <label>US01 Orders</label>
    </listViews>
    <nameField>
        <displayFormat>O-{00000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ACCL__Delivery_Recipient_Not_Empty</fullName>
        <active>true</active>
        <description>Validates if delivery recipient is empty.</description>
        <errorConditionFormula>AND(ISBLANK(ACCL__Delivery_Recipient__c),  ISPICKVAL(ACCL__Phase__c, &quot;Released&quot;))</errorConditionFormula>
        <errorMessage>No valid Delivery Recipients have been found for the Order Customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Order_Template_Not_Empty</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( ACCL__Order_Template__c )</errorConditionFormula>
        <errorDisplayField>ACCL__Order_Template__c</errorDisplayField>
        <errorMessage>The Order Template can&apos;t be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Wholesaler_Not_Empty</fullName>
        <active>true</active>
        <description>Validates if Wholesaler is empty when it is required in order template.</description>
        <errorConditionFormula>AND(ACCL__Order_Template__r.ACCL__Wholesaler_Required__c, ISBLANK(ACCL__Wholesaler__c), ISPICKVAL( ACCL__Phase__c , &quot;Released&quot;))</errorConditionFormula>
        <errorMessage>No valid Wholesalers have been found for the Order Customer.</errorMessage>
    </validationRules>
</CustomObject>